--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Codeforces Timer",
+  "name": "Codeforces Countdown",
   "version": "0.1.0",
   "description": "A Timer for Codeforces problems",
   "permissions": ["storage"],
@@ -20,12 +20,12 @@
   },
   "browser_action": {
     "default_title": "Select timer for problems",
-    "default_icon": "images/cftimer.png",
+    "default_icon": "images/Codeforces Countdown.jpg",
     "default_popup": "html/popup.html"
   },
   "icons": {
-    "16": "images/cftimer.png",
-    "48": "images/cftimer.png",
-    "128": "images/cftimer.png"
+    "16": "images/Codeforces Countdown.jpg",
+    "48": "images/Codeforces Countdown.jpg",
+    "128": "images/Codeforces Countdown.jpg"
   }
 }
